data/derived/sp14/progs/unify/prog2662.ml.out
Characters 90-120:
  | h :: t -> bigAdd( mulByDigit (h l1') a') in
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type int list -> int list
       but an expression was expected of type int list
